--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,7 +6,7 @@
 }
 
 a {
-  color: #2A2A2A;
+  color: #2a2a2a;
 }
 
 body {
@@ -163,13 +163,15 @@ footer {
   min-height: 100px;
 }
 
-.item-container, .container-wrapper {
+.item-container,
+.container-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   margin: 0;
 }
 
-#creeate-reecipie .item-container, .container-wrapper {
+#creeate-reecipie .item-container,
+.container-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
 }
@@ -189,18 +191,18 @@ article {
   padding: 0.5rem;
   font-family: "Open Sans", sans-serif;
   margin: 0.5rem 0 1.5rem 0;
-  border: 2px solid #2A2A2A;
+  border: 2px solid #2a2a2a;
 }
 
 .search-section {
   display: grid;
   justify-content: center;
-  background-color: #D9AB23;
+  background-color: #d9ab23;
 }
 
 #search:focus {
   outline: none;
-  border: 2px solid #D9AB23;
+  border: 2px solid #d9ab23;
 }
 
 .search_area {
@@ -261,9 +263,9 @@ aside h3 {
 
 .page-breadcrumbs {
   font-family: "Montserrat", sans-serif;
-  color: #2A2A2A;
+  color: #2a2a2a;
   font-family: "Montserrat", sans-serif;
-  color: #2A2A2A;
+  color: #2a2a2a;
   font-size: small;
   padding-top: 1rem;
 }
@@ -331,7 +333,7 @@ aside h3 {
 
 .titles h3 {
   font-family: "Montserrat", sans-serif;
-  color: #2A2A2A;
+  color: #2a2a2a;
 }
 
 .recipe-details-wrapper {
@@ -361,7 +363,7 @@ aside h3 {
 
 .details-title {
   font-family: "Montserrat", sans-serif;
-  color: #2A2A2A;
+  color: #2a2a2a;
   font-size: smaller;
   width: 100%;
 }
@@ -404,7 +406,7 @@ aside h3 {
   width: 100%;
   padding: 1rem 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #2A2A2A;
+  background-color: #2a2a2a;
   text-transform: uppercase;
   color: #fff;
 }
@@ -415,11 +417,11 @@ aside h3 {
   font-size: smaller;
   text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
-  color: #2A2A2A;
+  color: #2a2a2a;
   /* padding: 81px; */
   background-color: #fff;
   border-radius: 3px;
-  border: solid #2A2A2A;
+  border: solid #2a2a2a;
   padding: 3px 3px;
 }
 
@@ -455,7 +457,8 @@ i {
   background-size: cover;
 }
 
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -477,7 +480,8 @@ i {
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.prev:hover,
+.next:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -539,23 +543,30 @@ i {
   padding: 1rem 0;
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
-  background-color: #A5D145;
+  background-color: #a5d145;
   font-weight: 600;
 }
 #signup-wrapper .secondary-button {
   width: 100%;
   padding: 1rem 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #2A2A2A;
+  background-color: #2a2a2a;
   text-transform: uppercase;
   color: #fff;
 }
 #signup-wrapper .log-in {
   color: white;
   font-weight: 600;
-  text-shadow: 2px 2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, -2px -2px 0 #000000, 2px 0px 0 #000000, 0px 2px 0 #000000, -2px 0px 0 #000000, 0px -2px 0 #000000, 0px 0px 10px rgba(0, 0, 0, 0);
+  text-shadow: 2px 2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000,
+    -2px -2px 0 #000000, 2px 0px 0 #000000, 0px 2px 0 #000000,
+    -2px 0px 0 #000000, 0px -2px 0 #000000, 0px 0px 10px rgba(0, 0, 0, 0);
 }
-
+#settings-headings {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 1.3rem;
+}
 #settings-headings a {
   display: block;
   color: #000000;
@@ -589,7 +600,7 @@ i {
   padding: 1rem 0;
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
-  background-color: #A5D145;
+  background-color: #a5d145;
   font-weight: 600;
 }
 .settings form {
@@ -613,12 +624,12 @@ i {
 }
 
 .icons-desktop a {
-  color: #2A2A2A;
+  color: #2a2a2a;
   cursor: pointer;
 }
 
 .icons-desktop a:hover {
-  color: #A5D145;
+  color: #a5d145;
   cursor: pointer;
 }
 
@@ -646,7 +657,7 @@ i {
   }
 
   .topnav#navigation a:hover {
-    color: #A5D145;
+    color: #a5d145;
   }
 
   .header-logo-desktop {
