--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,6 +17,10 @@ a {
   margin-top: 1rem;
 }
 
+.margin-right {
+  margin-right: 1rem;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   margin: 0 auto 0;
@@ -168,7 +172,79 @@ main {
 footer {
   background-color: #447019;
   width: 100%;
+  margin-bottom: 1rem;
   min-height: 100px;
+  font-family: "Open Sans", sans-serif;
+}
+
+footer p {
+  padding: 1rem;
+  color: #fff;
+  text-align: center;
+  font-size: smaller;
+}
+
+.footer-basic {
+  color: white;
+}
+
+.footer-logo {
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+}
+
+.footer-logo img {
+  width: 200px;
+  height: auto;
+}
+
+.footer-basic ul {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  /* flex-flow: column-reverse; */
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+
+.footer-basic li {
+  padding: 1rem 1rem 0.4rem 0;
+  display: inline-block;
+}
+
+.footer-basic ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity: 1;
+  font-weight: bold;
+}
+
+.footer-basic .social {
+  text-align: center;
+}
+
+.footer-basic .social > a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  margin: 1rem 1rem 0 0;
+  color: inherit;
+  opacity: 0.85;
+}
+
+.footer-basic .social > a:hover {
+  opacity: 1.2;
 }
 
 .item-container, .container-wrapper {
@@ -185,6 +261,10 @@ footer {
 article {
   background-color: #fff;
   margin: 1.5rem 0.5rem;
+}
+
+.dirty-article {
+  background-color: #f1f1f1;
 }
 
 .add-more {
@@ -265,6 +345,12 @@ aside h3 {
 }
 .aside-item .aside-text p {
   font-size: 0.9rem;
+}
+
+.reset-password {
+  color: #447019;
+  cursor: pointer;
+  font-family: "Open Sans", sans-serif;
 }
 
 .page-breadcrumbs {
@@ -372,7 +458,7 @@ aside h3 {
 
 .details-link {
   color: #447019 !important;
-  text-align: right;
+  font-family: "Open Sans", sans-serif;
 }
 
 .details-title2 {
@@ -412,6 +498,21 @@ aside h3 {
   background-color: #2A2A2A;
   text-transform: uppercase;
   color: #fff;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.recipe-details-button:hover {
+  width: 100%;
+  padding: 1rem 0;
+  font-family: "Montserrat", sans-serif;
+  background-color: #fff;
+  text-transform: uppercase;
+  color: #2A2A2A;
+  outline: none;
+  border: solid #2A2A2A;
+  cursor: pointer;
 }
 
 .secondary-button {
@@ -426,6 +527,7 @@ aside h3 {
   border-radius: 3px;
   border: solid #2A2A2A;
   padding: 3px 3px;
+  cursor: pointer;
 }
 
 i {
@@ -638,6 +740,10 @@ i {
   .li-item {
     display: none !important;
   }
+
+  .footer-basic ul {
+    flex-flow: column-reverse;
+  }
 }
 @media screen and (min-width: 720px) {
   .recipe-subpage main {
@@ -683,6 +789,10 @@ i {
 
   .aside-item {
     width: 100%;
+  }
+
+  .footer-basic ul {
+    flex-flow: column-reverse;
   }
 }
 @media screen and (min-width: 1048px) {
@@ -730,6 +840,10 @@ i {
 
   .header-logo-desktop {
     display: hidden !important;
+  }
+
+  .footer-basic ul {
+    flex-flow: wrap;
   }
 }
 @media screen and (min-width: 1320px) {
@@ -787,6 +901,10 @@ i {
   .aside-item .aside-text {
     max-width: 100%;
     padding: 0.4rem 1rem 0 79px;
+  }
+
+  .footer-basic ul {
+    flex-flow: wrap;
   }
 }
 /*# sourceMappingURL=style.css.map */
