--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -26,6 +26,9 @@ a{
 .margin-top{
   margin-top: 1rem;
 }
+.margin-right{
+  margin-right: 1rem;
+}
 body {
     font-family: $open-sans;
       margin: 0 auto 0;
@@ -167,12 +170,81 @@ p{
     max-width: 1600px;
     margin: auto;
   }
-
-footer {
+//footer
+  footer {
     background-color: $dark-green;
     width: 100%;
+    margin-bottom: 1rem;
     min-height: 100px;
-}
+    font-family: $open-sans;
+  }
+  footer p{
+    padding: 1rem;
+    color: $white;
+    text-align: center;
+    font-size: smaller;
+  }
+  .footer-basic {
+    color: #ffff;
+  }
+  
+  .footer-logo {
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+  }
+  .footer-logo img {
+    width: 200px;
+    height: auto;
+  }
+  .footer-basic ul {
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    /* flex-flow: column-reverse; */
+    line-height: 1.6;
+    margin-bottom: 0;
+  }
+  
+  .footer-basic li {
+    padding: 1rem 1rem 0.4rem 0;
+    display: inline-block;
+  }
+  
+  .footer-basic ul a {
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity: 1;
+    font-weight: bold;
+  }
+  
+  .footer-basic .social {
+    text-align: center;
+  }
+  
+  .footer-basic .social > a {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    margin: 1rem 1rem 0 0;
+    color: inherit;
+    opacity: 0.85;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity: 1.2;
+  }
+ //footer 
 
 .item-container, .container-wrapper {
     display: grid;
@@ -186,6 +258,10 @@ footer {
 article {
     background-color: $white;
     margin: 1.5rem 0.5rem;
+}
+.dirty-article {
+  background-color: $dirty-white;
+
 }
 .add-more{
   float: right;
@@ -267,7 +343,11 @@ aside {
     }
 }
 
-
+.reset-password{
+  color: $dark-green;
+  cursor:pointer;
+  font-family: $open-sans;
+}
 .page-breadcrumbs {
     font-family: $montserrat;
     color: $dark-grey;
@@ -367,8 +447,8 @@ width: 30px;
     width: 100%;
 }
 .details-link{
-  color: #447019!important;
-  text-align: right;
+  color: $dark-green!important;
+  font-family: $open-sans;
 }
 .details-title2 {
     font-size: 0.75rem;
@@ -414,6 +494,20 @@ width: 30px;
     background-color: $dark-grey;
     text-transform: uppercase;
     color: $white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+.recipe-details-button:hover {
+  width: 100%;
+  padding: 1rem 0;
+  font-family: $montserrat;
+  background-color: $white;
+  text-transform: uppercase;
+  color: $dark-grey;
+  outline: none;
+  border: solid $dark-grey;
+  cursor: pointer;
 }
 .secondary-button{
   width: 25%;
@@ -427,6 +521,7 @@ width: 30px;
   border-radius: 3px;
   border: solid #2A2A2A;
   padding: 3px 3px;
+  cursor: pointer;
 }
 
 i {
@@ -550,6 +645,8 @@ i {
     text-transform: uppercase;
     background-color: $medium-green;
     font-weight: 600;
+
+    
     }
     .secondary-button{
       width: 100%;
@@ -653,6 +750,10 @@ i {
 .li-item{
   display: none!important;
 }
+.footer-basic ul {
+  flex-flow: column-reverse; 
+}
+
   }
 
 @media screen and (min-width: 720px) {
@@ -693,7 +794,9 @@ i {
     .aside-item {
       width: 100%;
     }
-  
+    .footer-basic ul {
+      flex-flow: column-reverse; 
+    }
   }
 
   @media screen and (min-width: 1048px) {
@@ -735,6 +838,8 @@ i {
   .header-logo-desktop {
       display: hidden!important;
     }
+    .footer-basic ul {
+      flex-flow: wrap;}
   }
   @media screen and (min-width: 1320px) {
 
@@ -783,6 +888,10 @@ i {
     .aside-item .aside-text {
         max-width: 100%;
         padding: 0.4rem 1rem 0 79px;}
+
+    .footer-basic ul {
+          flex-flow: wrap;}
+        
   }
   
   /*# sourceMappingURL=style.css.map */
