--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -42,6 +42,7 @@ header {
   
   nav {
     display: flex;
+    position: fixed;
     font-family: "Montserrat", sans-serif;
     text-transform: uppercase;
     font-weight: 600;
@@ -58,6 +59,7 @@ header {
     left: 0;
     justify-content: space-between;
     align-items: center;
+    z-index: 10;
   }
   
   
@@ -128,7 +130,24 @@ nav {
         font-size: 17px;
 
     }
+
+    li {
+      list-style-type: none;
+    }
 }
+
+
+  .header-logo-desktop {
+      display: none;
+    }
+.link-wrapper {
+  display: none;
+}
+.footer-basic ul {
+  flex-flow: column-reverse; 
+}
+
+
 p{
     font-family: $open-sans;
     font-weight: 300;
@@ -143,16 +162,33 @@ p{
   }
   
   .topnav.responsive #icon-wrapper {
-    padding: 14px 16px;
     position: absolute;
     right: 0;
-    top: 0;
-  }
+    top: 8px;
+  } 
   
-  .topnav.responsive a {
-    float: none;
+  .topnav.responsive  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: inline;
+    z-index: 10;
+    .link-wrapper {
+      display: block;
+      width: 100%;
+      align-self: flex-end;
+
+      
+    }
+
+    li {
+      width: 100vw;
+    float: left;
     display: block;
     text-align: left;
+    }
+
+
   }
   
   #icon-wrapper {
@@ -259,7 +295,7 @@ article {
     background-color: $white;
     margin: 1.5rem 0.5rem;
 }
-.dirty-article {
+.recipe-container {
   background-color: $dirty-white;
 
 }
@@ -277,7 +313,7 @@ article {
   .search-section{
     display: grid;
     justify-content: center;
-    background-color: $yellow;
+    background-color: $dirty-white;
   }
   #search:focus {
     outline: none;
@@ -313,7 +349,7 @@ h2 {
 }
 h4 {
   font-family: "Montserrat", sans-serif;
-  color: #fff;
+  color: $black;
   font-weight: 100;
   font-size: large;
 }
@@ -533,7 +569,10 @@ i {
 .slideshow-container {
     position: relative;
     margin: auto;
+    margin-top: 67px;
   }
+
+
   
   .mySlides {
     display: none;
@@ -743,18 +782,6 @@ i {
 } 
 // Media queries
 
-@media screen and (min-width: 370px){
-  .header-logo-desktop {
-      display: none!important;
-    }
-.li-item{
-  display: none!important;
-}
-.footer-basic ul {
-  flex-flow: column-reverse; 
-}
-
-  }
 
 @media screen and (min-width: 720px) {
 
@@ -777,13 +804,7 @@ i {
     .header-desktop{
       display: none;
     }
-    /* label {
-      color: #fff;
-    } */
-    .nav-link {
-      float: none;
-      display: inline;
-    }
+
     li .li-item{
       display: hidden!important;
     }
@@ -859,10 +880,16 @@ i {
       position: fixed;
       bottom: 0;
     }
+
+    .link-wrapper {
+      display: flex;
+    }
     #icon-wrapper{
       display: none;
     }
     .topnav {
+      display: flex;
+      position: static;
       padding: 17px 0;
       text-align: center;
       justify-content: center;
@@ -871,6 +898,10 @@ i {
       margin: 7px 60px 7px 0px;
       padding: 0 0 3px;
       position: relative;
+    }
+
+    .slideshow-container {
+      margin-top: 0;
     }
     .header-desktop{
       display: flex;
